fixed partial css

--- a/contact.html
+++ b/contact.html
@@ -15,28 +15,27 @@
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a class="active" href="contact.html">Contact</a></li>
+                <li><a class="active" href="products.html">Contact</a></li>
                 <li id="lg-bag"><a href="cart.html"><i class="fa fa-shopping-cart"></i></a></li>
                 <a href="#" id="close"><i class="fa fa-times"></i></a>
             </ul>
         </nav>
-        <div id="mobile">
+        <aside id="mobile">
             <a href="cart.html"><i class="fa fa-shopping-cart"></i></a>
             <i id="bar" class="fa fa-outdent"></i>
-        </div>
+        </aside>
     </header>
     <section id="contact-container">
-        <div class="contact-box">
-                <h4>Contact Us</h4>
-                <form>
-                    <input type="text" class="input-field" placeholder="your Name">
-                    <input type="email" class="input-field" placeholder="your Email">
-                    <input type="text" class="input-field" placeholder="Subject">
-                    <textarea type="text" class="input-field textarea-field" placeholder="Your message"></textarea>
-                    <button type="button" class="contact-button">Send Message</button>
-                </form>
-            </div>
-        </div>
+        <main class="contact-box">
+            <h4>Contact Us</h4>
+            <form>
+                <input type="text" class="input-field" placeholder="your Name">
+                <input type="email" class="input-field" placeholder="your Email">
+                <input type="text" class="input-field" placeholder="Subject">
+                <textarea type="text" class="input-field textarea-field" placeholder="Your message"></textarea>
+                <button type="button" class="contact-button">Send Message</button>
+            </form>
+        </main>
     </section>
     <footer>
         <article class="col">
