--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li id="lg-bag"><a href="cart.html"><i class="fa fa-shopping-cart"></i></a></li>
+                <li id="lg-bag"><a href="products.html"><i class="fa fa-shopping-cart"></i></a></li>
                 <a href="#" id="close"><i class="fa fa-times"></i></a>
             </ul>
         </nav>
-        <div id="mobile">
+        <aside id="mobile">
             <a href="cart.html"><i class="fa fa-shopping-cart"></i></a>
             <i id="bar" class="fa fa-outdent"></i>
-        </div>
+        </aside>
     </header>
     <main id="hero">
         <h2>Best deals ever!</h2>
