--- a/products.html
+++ b/products.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <aside id="mobile">
-            <a href="cart.html"><i class="fa fa-shopping-cart"></i></a>
+            <a href="products.html"><i class="fa fa-shopping-cart"></i></a>
             <i id="bar" class="fa fa-outdent"></i>
         </aside>
     </header>
