--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>Best deals ever!</h2>
         <h1>Minions for sale below</h1>
         <p>Save more by subscribing to us!</p>
-        <form action="products.html"><button class="Shop" role="button">Shop Now</button></form>
+        <form action="products.html"><button class="shop" role="button">Shop Now</button></form>
     </main>
     <section id="slider">
         <h2 class="product-category">Finest Servants</h2>
