--- a/products.html
+++ b/products.html
@@ -46,7 +46,7 @@
             <h4>About</h4>
             <a href="#">About us</a>
             <a href="#">Privacy Policy</a>
-            <a href="#">Terms & Conditions</a>
+            <a href="#">Terms and Conditions</a>
             <a href="#">Contact Us</a>
         </article>
         <article class="col">
