--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a class="active" href="products.html">Contact</a></li>
-                <li id="lg-bag"><a href="cart.html"><i class="fa fa-shopping-cart"></i></a></li>
+                <li id="lg-bag"><a href="products.html"><i class="fa fa-shopping-cart"></i></a></li>
                 <a href="#" id="close"><i class="fa fa-times"></i></a>
             </ul>
         </nav>
